--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -4,4 +4,13 @@
     width: 100%;
     background-color: aliceblue;
     justify-content: space-between;
+    align-items: center;
+    padding: 16px;
+}
+
+.title img{
+    height: 32px;
+    width: 32px;
+    margin-left: 8px;
+    border-radius: 18%;
 }
