--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,6 @@
   overflow-x: hidden;
   box-sizing: border-box;
 }
-
 .main{
   display: flex;
   flex-direction: column;
@@ -30,4 +29,46 @@ input {
   width: 40%;
   height: 2rem;
   border-radius: 10px;
+}
+
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 400px));
+  padding: 1rem;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.product-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  background-color: white;
+  width: 100vh;
+}
+
+.card-image img {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  display: block;
+}
+
+.card-info {
+  padding: 1rem;
+}
+
+.price-section {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-options {
+  padding: 1rem;
+}
+
+#size-btns {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 120px);
+  height: 40px;
 }
