--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 16px;
+    border-bottom: 1px solid lightgrey;
 }
 
 .title img{
